using java service wrapper